[gd_scene load_steps=2 format=3 uid="uid://drlgshxqnwmrj"]

[ext_resource type="Script" uid="uid://bnxrr0220b6ew" path="res://scripts/world/asteroid_belt.gd" id="1_ke4j6"]

[node name="AsteroidBelt" type="Node2D"]
script = ExtResource("1_ke4j6")

[node name="HiddenCenter" type="Node2D" parent="."]

[node name="AsteroidContainer" type="Node2D" parent="."]
